--- a/test/Microsoft.Web.WebPages.OAuth.Test/packages.config
+++ b/test/Microsoft.Web.WebPages.OAuth.Test/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Core" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
+  <package id="Moq" version="4.5.21" targetFramework="net45" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
