--- a/test/System.Net.Http.Formatting.NetCore.Test/packages.config
+++ b/test/System.Net.Http.Formatting.NetCore.Test/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.8" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
+  <package id="Moq" version="4.5.21" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.1" targetFramework="net45" />
