--- a/src/System.Net.Http.Formatting.NetCore/project.json
+++ b/src/System.Net.Http.Formatting.NetCore/project.json
@@ -81,22 +81,15 @@
     "warningsAsErrors": true
   },
   "dependencies": {
-    "Microsoft.Bcl.Build": "1.0.14",
-    "Microsoft.Net.Http": "2.2.13",
     "NETStandard.Library": "1.6.0",
-    "Newtonsoft.Json": "6.0.4",
+    "Newtonsoft.Json": "9.0.1",
     "System.ComponentModel.EventBasedAsync": "4.3.0",
     "System.Diagnostics.Contracts": "4.3.0",
-    "System.Dynamic.Runtime": "4.3.0",
     "System.Runtime.Serialization.Xml": "4.3.0-*",
     "System.Xml.XmlSerializer": "4.3.0-*"
   },
   "frameworks": {
-    "netstandard1.1": {
-      "imports": [
-        "portable-net451+win8"
-      ]
-    }
+    "netstandard1.1": {}
   },
   "packOptions": {
     "repository": {
