--- a/src/System.Net.Http.Formatting.NetCore/_project.json
+++ b/src/System.Net.Http.Formatting.NetCore/_project.json
@@ -81,24 +81,15 @@
     "warningsAsErrors": true
   },
   "dependencies": {
-    "Microsoft.Bcl": "1.1.3",
-    "Microsoft.Bcl.Build": "1.0.8",
-    "Microsoft.Net.Http": "2.2.13",
     "NETStandard.Library": "1.6.0",
-    "Newtonsoft.Json": "6.0.4",
+    "Newtonsoft.Json": "9.0.1",
     "System.ComponentModel.EventBasedAsync": "4.3.0",
     "System.Diagnostics.Contracts": "4.3.0",
-    "System.Dynamic.Runtime": "4.3.0",
     "System.Runtime.Serialization.Xml": "4.3.0-*",
     "System.Xml.XmlSerializer": "4.3.0-*"
   },
   "frameworks": {
-    "NETStandard1.1": {
-      "imports": [
-        "portable-net45+wp80+win8+wpa81",
-        "portable-net45+win8"
-      ]
-    }
+    "NETStandard1.1": {}
   },
   "version": "5.2.4-*"
 }
