Move to MSBuild v15.0 and latest xUnit MSBuild runner - change `CultureUtilTest` to use `Thread.CurrentThread`   - when hosted in latest MSBuild, changing `thread.CurrentThread` changes `Thread.CurrentThread` instead - find current Microsoft.Build.Tasks assembly in WebStack.tasks.targets, not just the WebApiHelpPage project - add `$(TestInParallel)`   - allows user to e.g. build in parallel but test assemblies serially   - default remains doing everything in parallel - change build.cmd to set %ErrorLevel% when exiting - add empty top-level Directory.Build.* files
Use only VS 2017 or later
- ensure same MSBuild features are available in command-line and VS builds
- move `$(MinimumVisualStudioVersion)` project settings to global location and bump required version up

Use Microsoft.NET.Sdk and `<PackageReference/>`s in .NET Standard project
- create a "real" .NET Standard 1.1 assembly, not .NET Portable v5.0

Move to latest version of the xUnit MSBuild runner
- v2.3.0 has a few bugs related to XML results files e.g. xunit/xunit#1515
- switch to current XML results format (required with v2.3.0 but doesn't hurt with later versions)
- make runner discovery version-independent
- add support for `msbuild /t:test` in test project directories

--- a/tools/WebStack.settings.targets
+++ b/tools/WebStack.settings.targets
@@ -10,11 +10,11 @@
     <!-- Use CustomAfterMicrosoftCommonTargets property (defined in Microsoft.Common.targets) to
              inject post-Common targets files without requiring the inclusion -->
     <CustomAfterMicrosoftCommonTargets>$(WebStackToolsPath)WebStack.targets</CustomAfterMicrosoftCommonTargets>
-    
+
     <!-- Force rebuild if this file changes -->
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
   </PropertyGroup>
-  
+
   <!-- Project Defaults -->
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,7 +36,7 @@
     <!-- Target 4.5 by default -->
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
 
-    <!-- Disable C# 6.0 features in Visual Studio since those features are not always available in command-line builds. -->
+    <!-- Disable C# 6.0 features in Visual Studio. -->
     <LangVersion Condition=" '$(MSBuildProjectExtension)' == '.csproj' ">5</LangVersion>
 
     <!-- Everything is delay signed by default -->
