--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -3,5 +3,5 @@
   <package id="Microsoft.Web.SkipStrongNames" version="1.0.0" />
   <package id="Microsoft.Web.StyleCop" version="1.0.0" />
   <package id="StyleCop" version="5.0.0" />
-  <package id="xunit.runner.msbuild" version="2.2.0-beta2-build3300" targetFramework="net45" />
+  <package id="xunit.runner.msbuild" version="2.3.1-rc2-build3844" targetFramework="net452" />
 </packages>
