--- a/tools/WebStack.xunit.targets
+++ b/tools/WebStack.xunit.targets
@@ -3,15 +3,13 @@
 
     <!-- This is a separate MSBuild file so that we can survive upgrades of the xunit NuGet package
          and also still work with NuGet Package Restore. -->
-    <ItemGroup>
-        <XunitMsBuildRunner Include="..\packages\**\xunit.runner.msbuild.dll"/>
-    </ItemGroup>
-    <UsingTask TaskName="Xunit.Runner.MSBuild.xunit" AssemblyFile="@(XunitMsBuildRunner)"/>
+    <Import Project="..\packages\**\xunit.runner.msbuild.props"/>
 
     <Target Name="Xunit">
         <!-- Override AppDomains default (set in xunit.runner.json). Need them with this runner. -->
-        <xunit AppDomains="true" Assemblies="$(TestAssembly)" XmlV1="$(XmlPath)"/>
-        <!-- Replace potentially illegal escaped characters (if they get through validations done during Save) -->
+        <xunit AppDomains="true" Assemblies="$(TestAssembly)" Xml="$(XmlPath)"/>
+
+        <!-- Replace potentially illegal escaped characters (if they get through validations done during Save). -->
         <RegexReplace
             Files="$(XmlPath)"
             Find="&amp;#x(?&lt;char&gt;[0-9A-Fa-f]+);"
