Build tests targeting .NET 4.5.2 - precondition for other tool upgrades; xUnit in particular does not support older framework versions
No-op `test` target in Microsoft.TestCommon project

--- a/test/Directory.Build.targets
+++ b/test/Directory.Build.targets
@@ -8,6 +8,6 @@
     </ItemGroup>
 
     <!-- Override AppDomains default (set in xunit.runner.json). Need them with this runner. -->
-    <xunit AppDomains="true" Assemblies="@(TestAssembly)"/>
+    <xunit AppDomains="true" Assemblies="@(TestAssembly)" Condition="$(IsTestProject)"/>
   </Target>
 </Project>
