--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,3 +1,8 @@
 <Project>
-  <!-- Stop MsBuild searching parent directories for this file. -->
+  <!-- Also stop MsBuild searching parent directories for this file. -->
+
+  <PropertyGroup>
+    <!-- Require VS2017 so VS builds also use MSBuild v15.0. -->
+    <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
+  </PropertyGroup>
 </Project>
