Move to latest version of the xUnit MSBuild runner - v2.3.0 has a few bugs related to XML results files e.g. xunit/xunit#1515 - switch to current XML results format (required with v2.3.0 but doesn't hurt with later versions) - make runner discovery version-independent - add support for `msbuild /t:test` in test project directories

--- a/tools/WebStack.tasks.targets
+++ b/tools/WebStack.tasks.targets
@@ -26,24 +26,24 @@
       <Code Type="Fragment" Language="cs">
         <![CDATA[
                 Version minimumRequiredVersion;
-                
+
                 if (!Version.TryParse(MinimumVersion, out minimumRequiredVersion))
                 {
                     Log.LogError("MinimumVersion '{0}' is not a valid Version.", MinimumVersion);
                 }
-        
+
                 try
                 {
                     OutputFileName = Path.GetFullPath(OutputFileName);
-                    
+
                     if (File.Exists(OutputFileName))
                     {
                         // If NuGet.exe exists but is less than the minimum required version, delete it so that the
                         // latest version will be downloaded.
                         FileVersionInfo versionInfo = FileVersionInfo.GetVersionInfo(OutputFileName);
-                        
+
                         string toParse;
-                        
+
                         if (versionInfo != null && versionInfo.ProductVersion != null)
                         {
                             toParse = versionInfo.ProductVersion;
@@ -52,10 +52,10 @@
                         {
                             toParse = null;
                         }
-                        
+
                         Version current;
                         Version parsed;
-                        
+
                         if (toParse != null && Version.TryParse(toParse, out parsed))
                         {
                             current = parsed;
@@ -65,13 +65,13 @@
                             // Treat a missing or invalid version like V0.0 (which will trigger a delete and download).
                             current = new Version(0, 0);
                         }
-                        
+
                         if (current < minimumRequiredVersion)
                         {
                             File.Delete(OutputFileName);
                         }
                     }
-                    
+
                     if (!File.Exists(OutputFileName))
                     {
                         Log.LogMessage("Downloading latest version of NuGet.exe...");
@@ -187,7 +187,7 @@
 
                             if (failures > 0)
                             {
-                                foreach (XElement classWithFailure in assembly.Elements(XName.Get("class"))
+                                foreach (XElement classWithFailure in assembly.Elements(XName.Get("collection"))
                                     .Where(c => Int32.Parse(c.Attribute(XName.Get("failed")).Value) > 0))
                                 {
                                     foreach (XElement failure in classWithFailure.Elements(XName.Get("test"))
