--- a/tools/src/Microsoft.Web.FxCop/Microsoft.Web.FxCop.csproj
+++ b/tools/src/Microsoft.Web.FxCop/Microsoft.Web.FxCop.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <FxCopLocation>$(MSBuildExtensionsPath)\..\Team Tools\Static Analysis Tools\FxCop\</FxCopLocation>
+    <FxCopLocation>$(VsInstallRoot)\Team Tools\Static Analysis Tools\FxCop\</FxCopLocation>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FxCopSdk">
